--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirigiendo...</title>
-  <!-- Redirige después de 3 segundos -->
-  <meta http-equiv="refresh" content="3;url=https://ejemplo.com">
+  <!-- Redirige después de 3 segundos 
+  <meta http-equiv="refresh" content="3;url=https://ejemplo.com">-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17537571654"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17537571654');
+  </script>
 </head>
 
 <body>
