--- a/promo/index.html
+++ b/promo/index.html
@@ -4,12 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirigiendo...</title>
-  <!-- Redirige después de 3 segundos -->
-  <meta http-equiv="refresh" content="3;url=https://ejemplo.com">
+  <!-- Redirige después de 3 segundos 
+  <meta http-equiv="refresh" content="3;url=https://ejemplo.com">-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17537571654"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17537571654');
+  </script>
 </head>
 
 <body>
-  <p>Serás redirigido en unos segundos... Si no, haz clic <a href="https://ejemplo.com">aquí</a>.</p>
+  <p>Serás redirigido en unos segundos... Si no, haz clic <a href="https://ejemplo.com">OK</a>.</p>
 </body>
 
 </html>
