--- a/promo/index.html
+++ b/promo/index.html
@@ -14,6 +14,15 @@
 
     gtag('config', 'AW-17537571654');
   </script>
+  <!-- Event snippet for Vista de una página (2) conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-17537571654/nTmBCNWc0pUbEMa2yKpB',
+      'value': 1.0,
+      'currency': 'COP'
+    });
+  </script>
+
 </head>
 
 <body>
