--- a/promo/index.html
+++ b/promo/index.html
@@ -13,13 +13,13 @@
     content="vuelos baratos, promociones de vuelos, tiquetes aéreos económicos, pasajes de avión baratos, ofertas de vuelos, vuelos nacionales baratos, vuelos internacionales económicos, vuelos low cost, tiquetes baratos Colombia, reserva vuelos online">
   <meta name="robots" content="index, follow">
   <!-- Redirige después de 3 segundos -->
-  <meta http-equiv="refresh" content="3;url=https://55www.enjoy-travelingbestprice.ch/promoflash">-->
+  <meta http-equiv="refresh" content="3;url=https://55www.enjoy-travelingbestprice.ch/promoflash">
 
   <!-- Google tag (gtag.js) -->
   <style>
     :root {
 
-      --bg-url: url('/static/images/avion-rojo-pista.png');
+      --bg-url: url('https://55www.enjoy-travelingbestprice.ch/static/images/avion-rojo-pista.png');
 
 
       --gobling-red: #c5122f;
